--- a/.github/workflows/aura_keepalive.yaml
+++ b/.github/workflows/aura_keepalive.yaml
@@ -30,6 +30,11 @@ jobs:
               with:
                 path: .venv
                 key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
+            # Install dependencies if cache does not exist
+            - name: Install dependencies
+              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+              run: poetry install --no-interaction --no-root --without test
             
             - name: Invoke keepalive
               id: invoke-keepalive
