--- a/.github/workflows/aura_keepalive.yaml
+++ b/.github/workflows/aura_keepalive.yaml
@@ -9,11 +9,16 @@ jobs:
     aura-keepalive:
         runs-on: ubuntu-latest
         steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+              with:
+                token: ${{ secrets.GITHUB_TOKEN }}
+
             - name: Setup Python
               id: setup-python
               uses: actions/setup-python@v5
               with:
-                python-version: '3.11'
+                python-version: '3.12'
 
             - name: Install Poetry
               uses: snok/install-poetry@v1
