--- a/.github/workflows/aura_keepalive.yaml
+++ b/.github/workflows/aura_keepalive.yaml
@@ -27,7 +27,7 @@ jobs:
                 virtualenvs-in-project: true
                 virtualenvs-path: .venv
                 installer-parallel: true
-                
+
             # Install dependencies if cache does not exist
             - name: Install dependencies
               run: poetry install --no-interaction --no-root --without test
@@ -38,4 +38,4 @@ jobs:
                 DB_URI: ${{ secrets.DB_URI }}
                 DB_USER: ${{ secrets.DB_USER }}
                 DB_PWD: ${{ secrets.DB_PWD }}
-              run: python ./script/aura_refresh.py
+              run: poetry run python ./script/aura_refresh.py
